stylus/partials/_metabar.styl
.rhd-metabar
	width 100%
	height auto
	padding 1em 0
	margin 1em auto

	.rhd-metabar-content
		width 100%

		.rhd-metabar-item
			width 100%
			display block

			.rhd-metabutton
				width 2em
				height 100%
				background-color $c_sec
				background-position center
				background-repeat no-repeat
				color $c_text
				text-transform uppercase
				text-decoration none
				text-align center
				font-weight 400
				font-size 1em
				line-height 1.3
				transition all 0.25s
				display inline-block
				position absolute
				top 0
				right 0

				&:hover
				&:active
					background-color $c_sec_lt

				.caret
				.search-submit
					width 50%
					height auto
					-vhcenter()
					-opacity(0.35)

			.search-field
				-placeholder-props( $ff_body, gray, 1, 300, uppercase )
				font-weight 300
				border 2px solid $c_bg
				transition background 0.25s
				text-transform uppercase

				&:focus
					background $near_white

			.rhd-dropdown-title
			.search-field
				width 100%
				height 1.9em
				padding-left 0.5em
				background white
				color gray
				position relative
				font-family $ff_body !important
				border 1px solid $c_sec

			.rhd-dropdown-title
				.dd-title-text
					position relative
					top 0.15em

			.rhd-dropdown
				position relative
				text-transform uppercase

				ul
					width 100%
					max-height 30vh
					position absolute
					top 2em
					font-family $ff_body
					overflow-y auto
					background white
					padding-left 0
					margin 0
					display none
					z-index 999
					box-shadow 0 1px 2px -1px rgba(0,0,0,0.5)

					li
						width 100%
						background white
						display block

						a
							width 100%
							height auto
							display block
							color gray
							padding 0.25em 0 0.25em 0.5em
							text-decoration none
							transition all 0.2s

							&:hover
							&:active
								background-color $c_sec_lt
			.blog-search
				top	0

	&.layout-tall
		.rhd-metabar-item
			.rhd-dropdown-title
				margin-bottom 0.5em

			&:last-of-type
				.rhd-dropdown-title
					margin-bottom 0


/* ==========================================================================
	Media Queries
   ========================================================================== */

@media screen and (min-width 40em)
	.rhd-metabar
		&.layout-wide
			padding 0 0 0.5em 0

			.rhd-metabar-content
				-wrapper()
				-flexbox()
				top 0.95em

				.rhd-metabar-item
					-flexitem()

				&.solo
					.rhd-metabar-item
						width 100%

				&.duo
					.rhd-metabar-item
						width 49%

				&.trio
					.rhd-metabar-item
						width 31%

				.blog-search
					position relative
					top	0.12em

